@@ -1,5 +1,11 @@
 2006-02-07  Ross Burton  <ross@burtonini.com>
 
+	* configure.in:
+	* src/sj-extractor.c:
+	Detect a MusicBrainz-tag supporting GStreamer at build time.
+
+2006-02-07  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Disable Select All when there is no disc (#329389).
 
